# cc_geometry

./: CMakeLists.txt  README.md  rotation_cube.cc  rotation_cube_eigen.cc  rotation_donut.cc
.cache/clangd/index/: rotation_cube.cc.8285AD52EE560ABB.idx  rotation_donut.cc.BD0D50F5249D4E79.idx
